--- a/index.html
+++ b/index.html
@@ -5,58 +5,56 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TMDB Post Generator</title>
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 body {
+  background: #0e0e0e;
+  color: #f5f5f5;
   font-family: 'Poppins', sans-serif;
-  background: #f9f9f9;
-  color: #222;
-  padding: 20px;
   margin: 0;
+  padding: 20px;
 }
 h1 {
   text-align: center;
-  color: #d32f2f;
-  font-weight: 400;
+  color: #ff5252;
+  font-weight: 500;
 }
 input, textarea, button {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 6px;
   margin-bottom: 10px;
+  border-radius: 6px;
+  border: 1px solid #333;
+  background: #1a1a1a;
+  color: #f5f5f5;
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
 }
-input, textarea {
-  background: #fff;
-  color: #222;
-}
 button {
-  background: #d32f2f;
+  background: #b71c1c;
   color: #fff;
   border: none;
-  font-weight: 500;
   cursor: pointer;
-  transition: 0.3s;
+  font-weight: 500;
+  transition: background 0.3s;
 }
 button:hover {
-  background: #388e3c;
+  background: #2e7d32;
 }
 .add-btn {
-  background: #555;
+  background: #444;
 }
 .code-box {
-  background: #f0f0f0;
-  border: 1px solid #ccc;
+  background: #1a1a1a;
+  border: 1px solid #333;
   border-radius: 6px;
   padding: 15px;
   white-space: pre-wrap;
+  color: #f5f5f5;
   font-family: monospace;
-  color: #222;
 }
 .copy-btn {
-  background: #388e3c;
-  margin-top: 8px;
+  background: #2e7d32;
+  margin-top: 10px;
   position: relative;
 }
 .copy-btn span {
@@ -88,7 +86,7 @@ button:hover {
 #screenshotPreview img {
   width: 100%;
   border-radius: 8px;
-  box-shadow: 0 0 6px rgba(0,0,0,0.1);
+  box-shadow: 0 0 6px rgba(255,255,255,0.1);
 }
 </style>
 </head>
@@ -104,6 +102,7 @@ button:hover {
   <input id="genres" placeholder="Genres">
   <input id="rating" placeholder="IMDb Rating">
   <input id="release" placeholder="Release Date">
+  <input id="duration" placeholder="Duration (optional)">
   <input id="poster" placeholder="Poster URL">
   <textarea id="overview" rows="3" placeholder="Overview"></textarea>
   <textarea id="customReview" rows="3" placeholder="Custom Review"></textarea>
@@ -133,7 +132,7 @@ button:hover {
 <button class="copy-btn" id="copyBtn">Copy HTML <span>Copied!</span></button>
 
 <script>
-const TMDB_API_KEY = "55b11132b5aef36e8376418dcce756f2"; // Replace with your TMDB key
+const TMDB_API_KEY = "YOUR_TMDB_API_KEY"; // Replace with your TMDB API key
 
 document.getElementById("fetchBtn").addEventListener("click", async () => {
   const id = document.getElementById("tmdbId").value.trim();
@@ -162,7 +161,6 @@ document.getElementById("fetchBtn").addEventListener("click", async () => {
     document.getElementById("poster").value = "https://image.tmdb.org/t/p/w500" + data.poster_path;
     document.getElementById("overview").value = data.overview;
 
-    // Screenshot preview
     const preview = document.getElementById("screenshotPreview");
     preview.innerHTML = screens.map(s =>
       `<img src="https://image.tmdb.org/t/p/w500${s.file_path}" alt="screenshot">`
@@ -193,6 +191,7 @@ document.getElementById("generateBtn").addEventListener("click", () => {
   const genres = document.getElementById("genres").value;
   const rating = document.getElementById("rating").value;
   const release = document.getElementById("release").value;
+  const duration = document.getElementById("duration").value;
   const poster = document.getElementById("poster").value;
   const overview = document.getElementById("overview").value;
   const review = document.getElementById("customReview").value;
@@ -209,28 +208,32 @@ document.getElementById("generateBtn").addEventListener("click", () => {
 
   const html = `
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
-.movie-post{background:#fff;color:#222;font-family:'Poppins',sans-serif;padding:20px;border-radius:12px;max-width:800px;margin:auto;box-shadow:0 0 10px rgba(0,0,0,0.1);}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+.movie-post{background:#121212;color:#f5f5f5;font-family:'Poppins',sans-serif;padding:20px;border-radius:12px;max-width:850px;margin:auto;box-shadow:0 0 15px rgba(0,0,0,0.5);line-height:1.6;}
 .movie-post img{width:100%;border-radius:10px;margin-bottom:10px;}
-.movie-post h2{color:#d32f2f;font-weight:400;}
-.movie-post p{line-height:1.6;font-size:14px;}
-.download-btn{display:inline-block;background:#d32f2f;color:#fff;padding:10px 15px;margin:5px 5px 5px 0;border-radius:6px;text-decoration:none;font-size:14px;transition:0.3s;}
-.download-btn:hover{background:#388e3c;}
-.screenshots img{width:100%;margin-top:10px;border-radius:10px;}
+.movie-post h2{color:#ff5252;font-weight:500;text-align:center;}
+.movie-post p{font-size:14px;margin:6px 0;}
+.movie-post p strong{font-weight:600;color:#fff;}
+.download-btn{display:inline-block;background:#b71c1c;color:#fff;padding:10px 15px;margin:8px 6px 0 0;border-radius:6px;text-decoration:none;font-size:14px;transition:0.3s;font-weight:500;}
+.download-btn:hover{background:#2e7d32;}
+.screenshots{margin-top:15px;display:grid;grid-template-columns:repeat(auto-fill,minmax(160px,1fr));gap:10px;}
+.screenshots img{width:100%;border-radius:8px;box-shadow:0 0 8px rgba(255,255,255,0.05);transition:transform 0.3s;}
+.screenshots img:hover{transform:scale(1.03);}
 </style>
 
 <div class="movie-post">
-  <h2>${title} (${year})</h2>
+  <h2>🎬 ${title} (${year})</h2>
   <img src="${poster}" alt="${title}">
   <p><strong>Genre:</strong> ${genres}</p>
   <p><strong>IMDb:</strong> ⭐ ${rating}/10</p>
   <p><strong>Release:</strong> ${release}</p>
+  ${duration ? `<p><strong>Duration:</strong> ${duration}</p>` : ""}
   <p><strong>Overview:</strong> ${overview}</p>
   ${review ? `<p><strong>Review:</strong> ${review}</p>` : ""}
   <div class="screenshots">
     ${screenshots.map(s => `<img src="${s}" alt="Screenshot">`).join("")}
   </div>
-  <h3>📥 Download Links:</h3>
+  <h3 style="margin-top:20px;color:#ff5252;">📥 Download Links:</h3>
   ${downloads.map(d => `<a href="${d.url}" class="download-btn">${d.name}</a>`).join("")}
 </div>`;
 
