--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ button:hover {
 <button class="copy-btn" id="copyBtn">Copy HTML <span>Copied!</span></button>
 
 <script>
-const TMDB_API_KEY = "YOUR_TMDB_API_KEY"; // Replace with your TMDB API key
+const TMDB_API_KEY = "55b11132b5aef36e8376418dcce756f2"; // Replace with your TMDB API key
 
 document.getElementById("fetchBtn").addEventListener("click", async () => {
   const id = document.getElementById("tmdbId").value.trim();
